# file-transfer-automation

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  populate_test_data.py  pyproject.toml  test.db
.github/workflows/: docker-publish.yml
data/folders/test/: test.txt
data/scripts/: test.py
data/test/: README.md
e2e_data/: sftp.json
e2e_tests/: __init__.py  test_ftp.py  test_local_directory.py  test_sftp.py  test_smb_cifs_share.py
filetransferautomation/: __main__.py  common.py  database.py  database_init.py  folders.py  ftp_client.py  hosts.py  human_bytes.py  jobs.py  logs.py  models.py  models_old.py  plugin_collection.py  plugins.py  schedules.py  script.py  settings.py  shemas.py  steps.py  tasks.py
filetransferautomation/step_plugins/: ftp.py  local_directory.py  mail.py  sftp.py  smb_cifs.py  workspace.py
filetransferautomation/transfer/: __init__.py
filetransferautomation/transfer/protocols/: base_protocol.py  local_directory.py  protocol_base.py
src/filetransferautomation/: __init__.py  __main__.py  hosts.py  models.py  schedules.py
src/filetransferautomation/transfer/: __init__.py
test-input/: test.txt
test-output/: test.txt  test2.txt  test3.txt
tests/: compare_filter_test.py  plugin_collection_test.py
